# car_api

./:  .env.example  README.md  mkdocs.yml  pyproject.toml  requirements_docs.txt
car_api/: app.py
car_api/core/: security.py  settings.py
car_api/models/: __init__.py  cars.py  users.py
car_api/routers/: auth.py  brands.py  cars.py  users.py
car_api/schemas/: auth.py  brands.py  cars.py  users.py
docs/: api-endpoints.md  authentication.md  configuration.md  contributing.md  deployment.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  release-notes.md  structure.md  system-modeling.md  testing.md
migrations/: env.py
migrations/versions/: 4904cc8ea450_create_users_table.py  e346cbb1c44d_create_car_and_brand_tables.py
tests/: conftest.py  test_auth.py  test_brands.py  test_cars.py  test_db.py  test_users.py
